Make Top Nav Bar fixed on top and make Section anchor navigation navigates to a position that the section name is visible

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -8,6 +8,8 @@
 
   position: -webkit-sticky; /* Safari */
   position: sticky;
+  position: fixed;
+  width: 100vw;
   top: 0;
   z-index: 1;
 }
